deployements/ab-testing/virtualservice-match.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: java-app
  labels:
    app: java-app
spec:
  hosts:
    - java-app.local
  gateways:
    - java-app
  http:
    - route:
        - destination:
            host: java-app-v1
      match:
        - headers:
            x-api-version:
              exact: v1.0
    - route:
        - destination:
            host: java-app-v2
      match:
        - headers:
            x-api-version:
              exact: v2.0
